--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "nodemailer": "^6.6.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@types/node": "^16.7.6",
+    "nodemon": "^2.0.12",
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.2"
   }
 }
