--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "nodemailer",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "dotenv": "^10.0.0",
     "googleapis": "^84.0.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.7.6",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
